@@ -7,6 +7,7 @@
  - Fix for bug 28770: Once again -- Removed &nbsp; entities from html2text converted plain text
  - Fix for bug 26312: Try read before returning a part's input stream to detect possible I/O related errors
  - Fix for bug 28827: Support HTTP error code 429 (too many requests) and added appropriate handling for HTTP error codes w/o a pre-configured status message
+ - Fix for bug 28894: Changed handling for possibly absent request watcher service
 
 * 2013-09-16 - thorben.betten@open-xchange.com
 
